--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-  
+  <main id="weather-app-main">
+    <section id="city-and-time">
+      <span id="clock"></span>
+    </section>
+  </main>
 </body>
+<script type="text/javascript" src="./index.js"></script>
 </html>
