Add theme toggle functionality

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
   <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-  <main id="weather-app-main">
-    <section id="city-and-time">
+  <main id="weather-app-main" class="light-theme">
+    <section class="menu">
+      <span class="theme-toggle">
+        <input id="theme-toggle" type="checkbox">
+        <label id="theme-label">Light</label>
+      </span>
+    </section>
+    <section class="city-and-time">
       <span id="clock"></span>
     </section>
   </main>
