Add toggle component to switch theme

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
   <main id="weather-app-main" class="light-theme">
     <section class="menu">
       <span class="theme-toggle">
-        <input id="theme-toggle" type="checkbox">
+        <input type="checkbox" id="theme-toggle-input">
+        <label for="theme-toggle-input">
+          <div class="theme-toggle-container">
+            <div class="theme-toggle-content"></div>
+          </div>
+        </label>
         <label id="theme-label">Light</label>
       </span>
     </section>
