Add fontawesome cdn and add filter icon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>wheather-app</title>
   <link rel="stylesheet" href="./index.css">
+  <script src="https://kit.fontawesome.com/e1f95899c9.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <main id="weather-app-main" class="light-theme">
@@ -19,6 +20,7 @@
         </label>
         <label id="theme-label">Light</label>
       </span>
+      <i class="fas fa-filter"></i>
     </section>
     <section class="city-and-time">
       <span id="clock"></span>
