--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       <span id="clock"></span>
     </section>
   </main>
+  <footer>
+    <p>WeatherApp powered by <b>surionah</b></p>
+  </footer>
 </body>
 <script type="text/javascript" src="./index.js"></script>
 </html>
