Add Oswald font

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>wheather-app</title>
   <link rel="stylesheet" href="./index.css">
-  <script src="https://kit.fontawesome.com/e1f95899c9.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400&display=swap" rel="stylesheet">
 </head>
 <body>
   <main id="weather-app-main" class="light-theme">
@@ -29,6 +31,7 @@
   <footer>
     <p>WeatherApp powered by <b>surionah</b></p>
   </footer>
+  <script src="https://kit.fontawesome.com/e1f95899c9.js" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="./index.js"></script>
 </body>
-<script type="text/javascript" src="./index.js"></script>
 </html>
