Add weather info

--- a/index.html
+++ b/index.html
@@ -25,7 +25,20 @@
       <i class="fas fa-filter"></i>
     </section>
     <section class="city-and-time">
+      <span>Cochabamba</span>
       <span id="clock"></span>
+    </section>
+    <section class="weather-data">
+      <div></div>
+      <div class="values">
+        <p class="temperature">24˚C</p>
+        <p class="humedity">Humedad: <span>50%</span></p>
+        <p class="min">Temp. Minima: <span>12˚C</span></p>
+        <p class="max">Temp. Maxima: <span>26˚C</span></p>
+      </div>
+    </section>
+    <section>
+      <p class="weather-main">Cloud</p>
     </section>
   </main>
   <footer>
