Integrate with openweather api

--- a/index.html
+++ b/index.html
@@ -29,16 +29,18 @@
       <span id="clock"></span>
     </section>
     <section class="weather-data">
-      <div></div>
+      <figure>
+        <img src="" alt="weather-icon">
+      </figure>
       <div class="values">
-        <p class="temperature">24˚C</p>
-        <p class="humedity">Humedad: <span>50%</span></p>
-        <p class="min">Temp. Minima: <span>12˚C</span></p>
-        <p class="max">Temp. Maxima: <span>26˚C</span></p>
+        <p class="temperature"><span id="temperature"></span>˚C</p>
+        <p class="humidity">Humedad: <span id="humidity"></span>%</p>
+        <p class="min">Temp. Minima: <span id="min"></span>˚C</p>
+        <p class="max">Temp. Maxima: <span id="max"></span>˚C</p>
       </div>
     </section>
     <section>
-      <p class="weather-main">Cloud</p>
+      <p id='weather-main' class="weather-main">Cloud</p>
     </section>
   </main>
   <footer>
