Add dropdown to select city

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <i class="fas fa-filter"></i>
     </section>
     <section class="city-and-time">
-      <span>Cochabamba</span>
+      <select name="cities" id="cities-dropdown"></select>
       <span id="clock"></span>
     </section>
     <section class="weather-data">
