--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <i class="fas fa-filter"></i>
     </section>
     <section class="city-and-time">
-      <select name="cities" id="cities-dropdown"></select>
+      <select name="cities" id="cities-dropdown" size="1"></select>
       <span id="clock"></span>
     </section>
     <section class="weather-data">
